--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tsconfig/svelte": "^5.0.4",
-    "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "firebase-tools": "^13.29.1",
     "postcss": "^8.4.49",
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
   },
